# SeetaFaceEngine

FaceAlignment/src/: cfan.cpp
FaceAlignment/src/test/: face_alignment_test.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
